--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
             <li>Não depende de uma conexão ativa com um servidor</li>
         </ul>
 		
-		VERTIGO
+		VERTIGO 2
     </body>         
 </html>
