--- a/proposta_1.html
+++ b/proposta_1.html
@@ -3,7 +3,7 @@
       <title>Proposta 1 para homepage da empresa</title>
     </head>
     <body>
-      <h1>Cabeçalho do site</h1>
+      <h1>Cabeçalho do HOME</h1>
 
       Conteúdo do site
 
