Aqui está o conteúdo da página

--- a/proposta_1.html
+++ b/proposta_1.html
@@ -5,8 +5,10 @@
     <body>
       <h4>Cabeçalho do site</h4>
 
-      Conteúdo do site
-
+      <div>
+        Aqui está o conteúdo da página
+      </div>
+	  
       <h4>Rodapé do site</h4>
     </body>
   </html>
