Isso aqui é o corpo da página

--- a/proposta_1.html
+++ b/proposta_1.html
@@ -5,7 +5,9 @@
     <body>
       <h1>Cabeçalho do HOME</h1>
 
-      Conteúdo do site
+     <div>
+        Isso aqui é o corpo da página
+      </div>
 
       <h4>Rodapé do site</h4>
     </body>
