--- a/index.html
+++ b/index.html
@@ -14,6 +14,5 @@
             <li>Não depende de uma conexão ativa com um servidor</li>
         </ul>
 		
-		VERTIGO 2
-    </body>         
+jahjkah    </body>         
 </html>
